--- a/main.css
+++ b/main.css
@@ -35,21 +35,17 @@ p {
 
 /* Start Landing Page */
 nav {
+	z-index: 3;
 	display: grid;
-	grid-template-columns: 10% 1fr 1fr 10%;
-	min-height: 10vh;
+	grid-template-columns: 1% 2fr 1fr 1%;
+	min-height: 8vh;
 	align-items: center;
-} 
-
-#logo {
-	grid-column: 2/3;
-	font-size: 24px;
 }
 
 .navigation {
-	justify-content: ri ght;
+	background-color: transparent;
+	z-index: 3;
 	grid-column: 3/4;
-	align-items: center;
 }
 
 
@@ -60,19 +56,53 @@ section {
 	align-items: center;
 }
 
-.hero {
-   z-index: 1;
-   height: 60%;
-   width: 100%; 
+.landing-pic img {
+	width: 95%;
+	margin: 2px auto;
+	display: block;
+	padding-top: 60px;
+	padding-left: 15px;
+	z-index: -1;
 }
 
 
+.navigation {
+	 float: right;
+	 height: 100%;
+	 background-color: transparent;
+	 font-size: 14px;
+	 background-color: transparent;
+ }
+
+ .navigation a {
+	 height: 100%;
+	 display: table;
+	 float: left;
+	 padding: 0px 20px;
+	 color: transparent;
+	 background-color: transparent;
+
+ }
+
+ .navigation a li {
+	 display: table-cell;
+	 vertical-align: middle;
+	 height: 100%;
+	 color: rgb(0, 0, 0);
+	 font-family: DIN Condensed;
+	 font-size: 20px;
+	 background-color: transparent;
+ }
+
+/*
 .hero img {
 	width: 100%; 
 	height: 100%;
 	object-fit: cover;
 }
+*/
 
+/*
 .headline {
 	position: absolute;
 	top: 70%;
@@ -81,7 +111,9 @@ section {
 	transform: translate(-20%, -70%);
 	color: black;
 }
+*/
 
+/*
 .slider {
 	z-index: -1;
 	position: absolute; 
@@ -91,9 +123,10 @@ section {
 	height: 1000px;
 	background: white;
 }
+*/
 
 
-
+/*
  .header {
 	 width: 100%;
 	 height: 75px;
@@ -111,30 +144,7 @@ section {
 	 color: transparent;
  }
 
- .navigation {
-	 float: right;
-	 height: 100%;
-	 background-color: transparent;
-	 font-size: 14px;
- }
-
- .navigation a {
-	 height: 100%;
-	 display: table;
-	 float: left;
-	 padding: 0px 20px;
-	 color: transparent;
-
- }
-
- .navigation a li {
-	 display: table-cell;
-	 vertical-align: middle;
-	 height: 100%;
-	 color: rgb(0, 0, 0);
-	 font-family: DIN Condensed;
-	 font-size: 20px;
- }
+ 
 
  .socials a li {
 	display: block;
@@ -143,6 +153,7 @@ section {
 	margin: 0;
 	padding: 10px 0px;
  }
+ */
 
  /* New Animation stuff */
  
