--- a/main.css
+++ b/main.css
@@ -96,7 +96,6 @@ section {
 
 
 /* Start Arrow Hovering Effect */
-/* Arrow Transition */
 .arrow {
 	z-index: 5;
 	position: absolute;
@@ -112,7 +111,7 @@ section {
     transition: all 400ms ease;
   }
   
-  .arrow.right {
+  .arrow.right1 {
     z-index: 5;
     position: absolute;
     right: 0;
@@ -136,10 +135,33 @@ section {
     width: 200%;
     height: 200%;
   }
-
 /* End Arrow Hovering Effect */
+.about-me img {
+	background: transparent;
+	width: 95%;
+	margin: 1px auto;
+	display: block;
+	padding-top: 150px;
+	padding-left: 1px;
+	z-index: -1;
+}
 
+.arrow.right2 {
+    z-index: 5;
+    position: absolute;
+    right: 0;
+    -webkit-transform: translate3d(0,0 -50%, 0) rotate(135deg);
+            transform: translate3d(0, -50%, 0) rotate(135deg);
+  }
 
+  .socials a li {
+	display: block;
+	vertical-align: middle;
+	padding: 0;
+	margin: 0;
+	padding: 10px 0px;
+ }
+ 
 /*
 .hero img {
 	width: 100%; 
