--- a/main.css
+++ b/main.css
@@ -136,15 +136,7 @@ section {
     height: 200%;
   }
 /* End Arrow Hovering Effect */
-.about-me img {
-	background: transparent;
-	width: 95%;
-	margin: 1px auto;
-	display: block;
-	padding-top: 150px;
-	padding-left: 1px;
-	z-index: -1;
-}
+
 
 .arrow.right2 {
     z-index: 5;
@@ -155,12 +147,23 @@ section {
   }
 
   .socials a li {
+	z-index: 2;
 	display: block;
 	vertical-align: middle;
-	padding: 0;
-	margin: 0;
+	padding-right: 10px;
 	padding: 10px 0px;
  }
+
+ .about-me img {
+	position: fixed;
+	background: transparent;
+	width: 95%;
+	margin: 1px auto;
+	display: block;
+	padding-top: 150px;
+	padding-left: 1px;
+	z-index: 10;
+}
  
 /*
 .hero img {
