--- a/test.css
+++ b/test.css
@@ -55,14 +55,14 @@
       margin: 5px auto;
       display: block;
       padding-top: 3px;
-      padding-left: 60px;
+      padding-left: 50px;
       z-index: 0;
     }
 
     .socials a li {
       display: block;
       vertical-align: right;
-      padding: 10px 14px;
+      padding: 10px 10px;
       z-index: 10;
       text-align: right;
      }
@@ -142,6 +142,63 @@ z-index: 0;
       padding-right: 15px;
       z-index: 0;
 }
+
+.proj-1 {
+  height: 350px;
+  width: 350px;
+}
+
+.proj-1 img {
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+}
+
+/*
+.proj-1 :not(img){
+  position: absolute;
+  top: 30%;
+  z-index: 1;
+  color: #FF5555;
+  text-align: center;
+  width: 100%;
+}
+.proj-1 h3 {
+  top: 50%;
+}
+*/
+
+.proj-2 {
+  height: 350px;
+  width: 350px;
+}
+
+.proj-2 img {
+  width: 100%;
+  height: 100%;
+}
+
+.proj-3 {
+  height: 350px;
+  width: 350px;
+}
+
+.proj-3 img {
+  width: 100%;
+  height: 100%;
+}
+
+.proj-4 {
+  height: 350px;
+  width: 350px;
+}
+
+.proj-4 img {
+  width: 100%;
+  height: 100%;
+}
+
+
 
 /* Contact Me Begins */
 .contact-me-section {
