--- a/test.css
+++ b/test.css
@@ -146,12 +146,17 @@ z-index: 0;
 .proj-1 {
   height: 350px;
   width: 350px;
+  position: absolute;
+  left: 200px;
+  top: 1985px;
+  
 }
 
 .proj-1 img {
   width: 100%;
   height: 100%;
   border-radius: 4px;
+  
 }
 
 /*
@@ -169,18 +174,25 @@ z-index: 0;
 */
 
 .proj-2 {
+  position: absolute;
   height: 350px;
   width: 350px;
+  left: 600px;
+  padding-top: 100px;
 }
 
 .proj-2 img {
+  position: absolute;
   width: 100%;
   height: 100%;
 }
 
 .proj-3 {
+  position: absolute;
   height: 350px;
   width: 350px;
+  left: 200px;
+  top: 2350px;
 }
 
 .proj-3 img {
@@ -189,8 +201,11 @@ z-index: 0;
 }
 
 .proj-4 {
+  position: absolute;
   height: 350px;
   width: 350px;
+  left: 600px;
+  top: 2350px;
 }
 
 .proj-4 img {
@@ -250,6 +265,13 @@ section#contact div.container {
 
 
 /* Form Begins */
+.form-section {
+  height: 100vh;
+  /* background: rgb(0, 68, 255); */
+}
+
+
+
 body {
   font-family: DIN Condensed;
   font-size: 25px;
