--- a/test.css
+++ b/test.css
@@ -8,8 +8,9 @@
       height: 100vh;
       /* background: red; */
     }
- 
-		.navbar {
+    
+    
+    .navbar {
 			font-size: 20px;
 			font-family: DIN Condensed;		
 			margin-bottom: 0;
@@ -49,27 +50,48 @@
     .nav navbar-nav navbar-right li:hover {
       color: grey;
     }
-    
-    .landing-pic img {
-      position: absolute;
-      width: 98%;
-      margin: 5px auto;
-      display: block;
-      padding-top: 3px;
-      padding-left: 50px;
-      z-index: 0;
+  
+
+    /* Trying a header, light out 
+    .navbar {
+      padding: .8rem;
+      background-color;: transparent;
     }
 
-    .socials a li {
+    .navbar-nav li {
+      padding-right: 20px;
+    }
+
+    .nav-link {
+      font-size: 20px;
+    }
+
+    .nav navbar-nav navbar-right ul {
+      padding-right: 150px;
+    } */
+
+  
+    
+    #landing-pic {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 99%;
+      z-index: 0;
+      position: absolute;
+    }
+
+    #socials a li {
       display: block;
       vertical-align: right;
-      padding: 10px 10px;
+      padding: 10px 0px;
       z-index: 10;
+      padding-left: 10px;
       text-align: right;
      }
 
-     .socials {
-       padding-top: 21%;
+    #socials {
+       padding-top: 25%;
      }
 
 /* Start Arrow Hovering Effect */
@@ -119,14 +141,13 @@
   /* background: rgb(0, 68, 255); */
 }
 
-.about-me img { 
-width: 98%;
-margin: 3px auto;
-display: block;
-padding-top: 40px;
-padding-left: 15px;
-padding-right: 15px;
-z-index: 0;
+#about-me-section img { 
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 99%;
+      z-index: 0;
+      position: absolute;
 }
 
 .projects-section {
