--- a/partials/_variables.css
+++ b/partials/_variables.css
@@ -14,10 +14,12 @@ html,body{
 :root{
     --primary-color: #FF4141;
     --primary-color2: #FFD3D3;
-    --title-color: black;
-    --text-color: black;
+    --title-color: rgb(0, 0, 0);
+    --text-color: rgb(129, 129, 129);
     --border-color: black;
-    --gradient-color: linear-gradient(90deg, #FF4141, #FFD3D3);
+    --nav-color: linear-gradient(90deg, rgb(255, 53, 53), rgb(255, 191, 191));
+    --gradient-color: linear-gradient(90deg, rgb(255, 144, 144), rgb(146, 153, 255));
+    --gradient-backwards: linear-gradient(90deg, rgb(255, 70, 70), rgb(66, 79, 255));
     --shadow-color: 0px 10px 30px rgba(228, 70, 70, 0.3);
     --box-shadow: 0px 10px 30px rgba(57, 56, 61, 0.205);
 
