Remaking my projects section.

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,10 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: none;
 }
+
+
 
 /* Start Navigation */
 
@@ -47,11 +50,13 @@ html {
 /* Start Banner */
 .site-main {
     padding-top: 2%;
+    overflow-x: none;
 }
 
 .site-main .site-banner {
     /* NOT WORKING */
     background: url(../img/home-banner.png) no-repeat 50% 50%;
+    overflow-x: none;
 }
 
 .site-main .site-banner .site-title h3 {
@@ -95,6 +100,7 @@ html {
 .site-main .about-area {
     /* NOT WORKING */
     background: url(../img/about-me-banner.png) no-repeat 50% 50%;
+    overflow-x: none;
 }
 
 
@@ -134,6 +140,7 @@ html {
 
 
 /* Start Projects Area */
+/*
 .portfolio{
     margin: 4em 0;
     position: relative; 
@@ -148,7 +155,44 @@ html {
     width: 100%;
     margin: 1em;
      
+}*/
+
+.site-main .project-area {
+    padding: 4rem 0;
 }
+
+.site-main .project-area .button-group button {
+    background: transparent;
+    border: none;
+    font: normal 500 16px/130px var(--roboto);
+    text-transform: uppercase;
+}
+
+
+.site-main .project-area .button-group button + button {
+    padding-left: 3rem;
+}
+
+.site-main .project-area .grid .out-project > .title h4 {
+    font: normal 700 25px/12px var(--roboto);
+}
+
+
+/* #2 project area */
+#view {
+    background-color: aqua;
+}
+
+#item1 {
+    background-color: red;
+}
+
+#item1 img {
+    justify-content: center;
+}
+    
+
+
 
 /* End Projects Area */
 
@@ -174,3 +218,7 @@ footer.footer-area .social a:hover > i {
 
 
 /* End Footer Area */
+
+body {
+    overflow-x: none;
+}
